--- a/MatchGame 2.0/MainWindow.xaml
+++ b/MatchGame 2.0/MainWindow.xaml
@@ -38,5 +38,8 @@
         <TextBlock HorizontalAlignment="Left" Grid.Row="3" Text="?" VerticalAlignment="Center" FontSize="36" Grid.Column="2" Margin="34,0,0,0" MouseDown="TextBlock_MouseDown"/>
         <TextBlock HorizontalAlignment="Center" Grid.Row="3" Text="?" VerticalAlignment="Center" FontSize="36" Grid.Column="3" MouseDown="TextBlock_MouseDown"/>
         <TextBlock x:Name="timeTextBlock" HorizontalAlignment="Center" Grid.Row="4" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Center" Grid.ColumnSpan="4" MouseDown="timeTextBlock_MouseDown"/>
+        <TextBlock x:Name="textRight" HorizontalAlignment="Left" Margin="58,17,0,0" Grid.Row="4" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" FontSize="11" Tag="SKIP"/>
+        <TextBlock x:Name="textPercent" HorizontalAlignment="Left" Margin="58,48,0,0" Grid.Row="4" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" FontSize="11" Tag="SKIP"/>
+        <TextBlock x:Name="textWrong" HorizontalAlignment="Left" Margin="13,4,0,0" Grid.Row="4" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" FontSize="11" Tag="SKIP"/>
     </Grid>
 </Window>
